# catalogdb

./: .travis.yml  CHANGELOG.rst  README.md  README.rst  STYLE.rst  pyproject.toml  pytest.ini  setup.cfg
docs/sphinx/: api.rst  conf.py  index.rst  intro.rst
python/catalogdb/: __init__.py  __main__.py  cli.py  exceptions.py  load.py
python/catalogdb/core/: exceptions.py
python/catalogdb/tests/: test_main.py
tests/: test_main.py
